# rust-copy-paste

./: .gitignore  .pre-commit-config.yaml  BUILD.pkl  Cargo.toml  LICENSE  MANIFEST.in  README.md  TEST_PR.md  gemini.md  mkdocs.yml  nextest.toml  pyproject.toml
.code/agents/1469/: exec-call_13LfEqquMUbMW4Tjf9xXub6R.txt
.code/agents/2208/: exec-call_S7lDujhybCej0hwYguBmHda0.txt
.code/agents/2544/: exec-call_FLodERbRB98DMJq58IKeq70Q.txt
.code/agents/4386/: exec-call_vT5JcfMoXVFbODmohdgpUXtI.txt
.github/workflows/: benchmarks.yml  static.yml  test-augmentation.yml  visualization.yml
benchmarks/: __init__.py  benchmark_copy_paste.py  collect_metrics.py  run_benchmark.py  run_caching_benchmark.py  scenarios.py
copy_paste/: __init__.py  custom_copy_paste.py  rust_copy_paste.py  transform.py
docs/: METRICS.md  faq.md  gemini.md  index.html  index.md  migration-v1.md  script.js  style.css
docs/development/: building.md  contributing.md  testing.md
docs/getting-started/: architecture.md  installation.md  quickstart.md
docs/performance/: benchmarks.md  metrics.md
docs/user-guide/: albumentations.md  api-reference.md  configuration.md
examples/: visualize_pipeline.py
examples/visual_outputs/: README.md
simple_copy_paste/: __init__.py  transform.py
src/: affine.rs  blending.rs  coco_loader.rs  collision.rs  lib.rs  objects.rs  placement.rs
src/snapshots/: copy_paste__objects__tests__bbox_metadata_basic.snap  objects__bbox_metadata_basic.snap
tests/: __init__.py  create_composite_sources.py  create_dummy_dataset.py  generate_augmented_outputs.py  generate_labeled_outputs.py  generate_mixed_from_composite.py  generate_mixed_outputs.py  generate_true_mixed_outputs.py  integration_test.rs  regenerate_all_outputs.py  test_albumentations_transform.py  test_background_annotation_retention.py  test_basic_functionality.py  test_coco_loading.py  test_edge_cases.py  test_interface_comprehensive.py  test_registration.py  test_vmi_mrf_integration.py
tests/augmented_outputs/: metadata.json
tests/common/: mod.rs
tests/dummy_dataset/annotations/: annotations.json
working_docs/: clickhouse_query.sql  code_quality_analysis.md  copy_paste_review.md
