[package]
name = "copy_paste"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of copy-paste augmentation for object detection"

[lib]
name = "copy_paste"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.16"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
