[project]
name = "copy_paste"
version = "0.1.0"
description = "Custom Copy-Paste augmentation for object detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "torch==2.5.1; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "torchvision==0.20.1; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "opencv-python-headless>=4.8.0",
    "pycocotools>=2.0.0",
    "loguru>=0.7.0",
    "viscv>=0.1.0",
    "visdet>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["copy_paste*"]

[tool.setuptools.package-data]
'*' = ['*.yaml', '*.json']

[tool.uv.sources]
viscv = { workspace = true }
visdet = { workspace = true }
