[project]
name = "copy_paste"
version = "0.1.0"
description = "Rust-based copy-paste augmentation for object detection with Albumentations integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "albumentations>=1.4.0",
    "opencv-python-headless>=4.8.0",
    "pycocotools>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
benchmarks = [
    "pytest-benchmark>=5.0.0",
    "psutil>=5.9.0",
    "torch>=2.0.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "torchvision>=0.15.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "copy_paste._core"
